--- a/materialize-src/main.html
+++ b/materialize-src/main.html
@@ -12,26 +12,28 @@
 
     <body>
       <div class="wrapper-page">
-        <!-- header -->
+        <!-- header-->
         <header class="header">
           <h1 class="headering">welcome!</h1>
         </header>
-        <!-- logo -->
-        <div class="logo"></div>
-        <!-- video -->
-        <div class="video-wrapper">
-          <video class="responsive-video video" controls>
-            <source src="video/movie.mp4" type="video/mp4">
-          </video>
-        </div>
-        <!-- link to next page -->
-        <div class="link-wrapper">
-          <a href="login.html" class="link-next-page">Let's get started!</a>
-        </div>
-        <!-- footer -->
-        <footer class="footer">
+        <!-- content -->
+        <div class="content">
+          <div class="image-wrapper">
+            <img src="img/main-photo.png" alt="baby" />
+          </div>
+          <div class="logo"></div>
+          <div class="link-wrapper">
+            <ul>
+              <li><a href="#" class="sign-up">Let's get started!</a></li>
+              <li><a href="#" class="sign-in">Existing user sing in</a></li>
+            </ul>
+          </div>
 
-        </footer>
+          <!--<div class="link-wrapper">
+            <a href="login.html" class="link-next-page">Let's get started!</a>
+          </div>-->
+        </div>
+        <footer class="footer"></footer>
       </div>
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
