Added new pages

--- a/BabyNoggin/setup-birthdate.html
+++ b/BabyNoggin/setup-birthdate.html
@@ -39,6 +39,7 @@
                 </div>
                 <!-- calendar -->
                 <div class="calendar-wrapper">
+                    <div class="lines"></div>
                     <!-- select month -->
                     <div class="outside">
                         <select id="month" class="drum" name="month">
