--- a/BabyNoggin/index.html
+++ b/BabyNoggin/index.html
@@ -10,27 +10,25 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
-<body>
-    <div class="wrapper-landing-page">
-        <!-- header-->
-        <header class="header">
-            <h1 class="headering">welcome!</h1>
-        </header>
-        <!-- content -->
-        <div class="content">
-            <div class="image-wrapper">
-                <img src="img/main-photo.png" alt="baby" />
-            </div>
-            <div class="logo"></div>
-            <div class="link-wrapper">
-                <ul>
-                    <li><a href="setup.html" class="sign-up">Let's get started!</a></li>
-                    <li><a href="#" class="sign-in">Existing user sing in</a></li>
-                </ul>
-            </div>
-        </div>
-        <footer class="footer"></footer>
-    </div>
+<body id="landing-page" class="page-wrapper">
+      <!-- header-->
+      <header class="header">
+          <h1 class="headering">welcome!</h1>
+      </header>
+      <!-- content -->
+      <div class="content">
+          <div class="image-wrapper">
+              <img src="img/main-photo.png" alt="baby" />
+          </div>
+          <div class="logo"></div>
+          <div class="link-wrapper">
+              <ul>
+                  <li><a href="setup.html" class="sign-up">Let's get started!</a></li>
+                  <li><a href="#" class="sign-in">Existing user sing in</a></li>
+              </ul>
+          </div>
+      </div>
+      <footer class="footer"></footer>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/bin/materialize.min.js"></script>
