Change wrapper in setup-birthdate and setup-due-date

--- a/BabyNoggin/setup-birthdate.html
+++ b/BabyNoggin/setup-birthdate.html
@@ -23,8 +23,8 @@
         });
     </script>
 </head>
-<body>
-    <div class="wrapper-setup-birthdate">
+<body id="setup-birthdate" class="page-wrapper">
+    <!-- <div class="wrapper-setup-birthdate"> -->
         <!-- header -->
         <header class="header">
             <h1 class="headering">profile setup</h1>
@@ -119,6 +119,5 @@
         </div>
         <!-- footer -->
         <footer class="footer"></footer>
-    </div>
 </body>
 </html>
