--- a/BabyNoggin/setup-due-date.html
+++ b/BabyNoggin/setup-due-date.html
@@ -23,8 +23,8 @@
         });
     </script>
 </head>
-<body>
-    <div class="wrapper-due-date">
+<body id="setup-due-date" class="page-wrapper">
+    <div>
         <!-- header -->
         <header class="header">
             <h1 class="headering">profile setup</h1>
