--- a/BabyNoggin/profile-page.html
+++ b/BabyNoggin/profile-page.html
@@ -10,8 +10,8 @@
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
-    <body>
-        <div class="wrapper-profile-page">
+    <body id="profile-page" class="page-wrapper">
+        <!-- <div class="wrapper-profile-page"> -->
             <!-- header-->
             <header class="header">
                 <h1 class="headering">Mika's page</h1>
@@ -42,7 +42,6 @@
                 </div>
             </div>
             <footer class="footer"></footer>
-        </div>
         <!--Import jQuery before materialize.js-->
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="js/bin/materialize.min.js"></script>
