--- a/BabyNoggin/profile-progress.html
+++ b/BabyNoggin/profile-progress.html
@@ -9,8 +9,8 @@
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
-    <body>
-      <div class="wrapper-progress-page">
+    <body id="profile-progress" class="page-wrapper">
+      <!-- <div class="wrapper-progress-page"> -->
         <!-- header-->
         <header class="header">
           <h1 class="headering">Mika's page</h1>
