--- a/BabyNoggin/our-status-seek.html
+++ b/BabyNoggin/our-status-seek.html
@@ -9,35 +9,32 @@
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
-
-    <body>
-      <div class="wrapper-our-status status-seek">
-        <!-- header-->
-        <header class="header">
-          <h1 class="headering">our status icons</h1>
-          <a href="#" class="arrow-back"><img src="img/arrow.png" alt="arrow" /></a>
-          <a href="#" class="menu"><img src="img/icon-menu.png" alt="arrow" /></a>
-        </header>
-        <!-- content -->
-        <div class="content">
-          <div class="icon-status"></div>
-          <div class="description">
-            <h2>Seek Expect Advice</h2>
-            <p>
-              <span>First of all, don't worry!</span> In order to fully understand
-              what's going on with <span>Mika</span>, we recommend an in person
-              or live followup.
-            </p>
-            <p>
-              <span>Speak to your pediatrician or contact a specialist through
-              our </br><a href="#">Talk to an Expert</a>
-              feature.</span>
-            </p>
-          </div>
+    <body id="status-seek" class="page-wrapper our-status-wrapper">
+      <!-- header-->
+      <header class="header">
+        <h1 class="headering">our status icons</h1>
+        <a href="#" class="arrow-back"><img src="img/arrow.png" alt="arrow" /></a>
+        <a href="#" class="menu"><img src="img/icon-menu.png" alt="arrow" /></a>
+      </header>
+      <!-- content -->
+      <div class="content">
+        <div class="icon-status"></div>
+        <div class="description">
+          <h2>Seek Expect Advice</h2>
+          <p>
+            <span>First of all, don't worry!</span> In order to fully understand
+            what's going on with <span>Mika</span>, we recommend an in person
+            or live followup.
+          </p>
+          <p>
+            <span>Speak to your pediatrician or contact a specialist through
+            our </br><a href="#">Talk to an Expert</a>
+            feature.</span>
+          </p>
         </div>
-        <!-- footer -->
-        <footer class="footer"></footer>
       </div>
+      <!-- footer -->
+      <footer class="footer"></footer>
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="js/bin/materialize.min.js"></script>
