change bt-feed and added mixin

--- a/BabyNoggin/bt-feed.html
+++ b/BabyNoggin/bt-feed.html
@@ -23,8 +23,8 @@
         });
     </script>
 </head>
-<body>
-    <div class="tracker wrapper-tracker-3">
+<body id="bt-feed" class="page-wrapper tracker-wrapper">
+    <!-- <div class="tracker wrapper-tracker-3"> -->
         <!-- header-->
         <header class="header">
           <h1 class="headering">baby tracker</h1>
