--- a/BabyNoggin/bt-feed.html
+++ b/BabyNoggin/bt-feed.html
@@ -24,47 +24,45 @@
     </script>
 </head>
 <body id="bt-feed" class="page-wrapper tracker-wrapper">
-    <!-- <div class="tracker wrapper-tracker-3"> -->
-        <!-- header-->
-        <header class="header">
-          <h1 class="headering">baby tracker</h1>
-          <a href="#" class="arrow-back"><img src="img/arrow.png" alt="arrow" /></a>
-          <a href="#" class="menu"><img src="img/icon-menu.png" alt="arrow" /></a>
-        </header>
-        <!-- content -->
-        <div class="content">
-            <div class="list-menu">
-              <ul class="clear-fix">
-                <li class="active-link"><a href="#">Feed</a></li>
-                <li><a href="#">Sleep</a></li>
-                <li><a href="#">Vaccines</a></li>
-                <li><a href="#">Diary</a></li>
-              </ul>
-            </div>
-            <!-- form -->
-            <form action="#" name="date">
-                <div class="wrapper-menu-form">
-                  <a href="#">Cancel</a>
-                  <span>New Feeding</span>
-                  <input type="submit" name="button" class="button" value="Next">
-                </div>
-                <h2>Side/Method</h2>
-                <!--  -->
-                <div class="wrapper-select">
-                    <div class="lines"></div>
-                    <!-- select method -->
-                    <div class="">
-                        <select id="method" class="drum" name="mothod">
-                            <option value="0">Left</option>
-                            <option value="1">Right</option>
-                            <option value="2">Pumped Left</option>
-                            <option value="3">Pumped Right</option>
-                            <option value="4">Formula</option>
-                        </select>
-                    </div>
-                </div>
-            </form>
+    <!-- header-->
+    <header class="header">
+      <h1 class="headering">baby tracker</h1>
+      <a href="#" class="arrow-back"><img src="img/arrow.png" alt="arrow" /></a>
+      <a href="#" class="menu"><img src="img/icon-menu.png" alt="arrow" /></a>
+    </header>
+    <!-- content -->
+    <div class="content">
+        <div class="list-menu">
+          <ul class="clearfix">
+            <li class="active-link"><a href="#">Feed</a></li>
+            <li><a href="#">Sleep</a></li>
+            <li><a href="#">Vaccines</a></li>
+            <li><a href="#">Diary</a></li>
+          </ul>
         </div>
+        <!-- form -->
+        <form action="#" name="date">
+            <div class="wrapper-menu-form">
+              <a href="#">Cancel</a>
+              <span>New Feeding</span>
+              <input type="submit" name="button" class="button" value="Next">
+            </div>
+            <h2>Side/Method</h2>
+            <!--  -->
+            <div class="wrapper-select">
+                <div class="lines"></div>
+                <!-- select method -->
+                <div class="">
+                    <select id="method" class="drum" name="mothod">
+                        <option value="0">Left</option>
+                        <option value="1">Right</option>
+                        <option value="2">Pumped Left</option>
+                        <option value="3">Pumped Right</option>
+                        <option value="4">Formula</option>
+                    </select>
+                </div>
+            </div>
+        </form>
         <footer class="footer"></footer>
     </div>
 </body>
