--- a/BabyNoggin/bt-feed-time.html
+++ b/BabyNoggin/bt-feed-time.html
@@ -23,80 +23,77 @@
         });
     </script>
 </head>
-<body>
-    <div class="tracker wrapper-bt-feed-time">
-        <!-- header-->
-        <header class="header">
-          <h1 class="headering">baby tracker</h1>
-          <a href="#" class="arrow-back"><img src="img/arrow.png" alt="arrow" /></a>
-          <a href="#" class="menu"><img src="img/icon-menu.png" alt="arrow" /></a>
-        </header>
-        <!-- content -->
-        <div class="content">
-            <div class="list-menu">
-              <ul class="clear-fix">
-                <li class="active-link"><a href="#">Feed</a></li>
-                <li><a href="#">Sleep</a></li>
-                <li><a href="#">Vaccines</a></li>
-                <li><a href="#">Diary</a></li>
-              </ul>
-            </div>
-            <!-- form -->
-            <form action="#" name="date">
-                <div class="wrapper-menu-form">
-                  <a href="#">Cancel</a>
-                  <span>New Feeding</span>
-                  <input type="submit" name="button" class="button" value="Next">
-                </div>
-                <h2>Time</h2>
-                <!-- calendar -->
-                <div class="choose-time">
-                    <div class="lines"></div>
-                    <!-- select hour -->
-                    <div class="outside">
-                        <select id="hour" class="drum" name="hour">
-                            <option value="0">1</option>
-                            <option value="1">2</option>
-                            <option value="2">3</option>
-                            <option value="3">4</option>
-                            <option value="4">5</option>
-                            <option value="0">6</option>
-                            <option value="1">7</option>
-                            <option value="2">8</option>
-                            <option value="3">9</option>
-                            <option value="4">10</option>
-                            <option value="0">11</option>
-                            <option value="1">12</option>
-                        </select>
-                    </div>
-                    <!-- select min -->
-                    <div class="outside">
-                        <select id="min" class="drum" name="min">
-                            <option value="0">:00</option>
-                            <option value="1">:05</option>
-                            <option value="2">:10</option>
-                            <option value="3">:15</option>
-                            <option value="4">:20</option>
-                            <option value="0">:25</option>
-                            <option value="1">:30</option>
-                            <option value="2">:35</option>
-                            <option value="3">:40</option>
-                            <option value="4">:45</option>
-                            <option value="0">:50</option>
-                            <option value="1">:55</option>
-                        </select>
-                    </div>
-                    <!--  -->
-                    <div class="outside">
-                        <select id="time-of-day" class="drum" name="time-of-day">
-                            <option value="0">AM</option>
-                            <option value="1">PM</option>
-                        </select>
-                    </div>
-                </div>
-            </form>
+<body id="bt-feed-time" class="page-wrapper tracker-wrapper">
+    <!-- header-->
+    <header class="header">
+      <h1 class="headering">baby tracker</h1>
+      <a href="#" class="arrow-back"><img src="img/arrow.png" alt="arrow" /></a>
+      <a href="#" class="menu"><img src="img/icon-menu.png" alt="arrow" /></a>
+    </header>
+    <!-- content -->
+    <div class="content">
+        <div class="list-menu">
+          <ul class="clearfix">
+            <li class="active-link"><a href="#">Feed</a></li>
+            <li><a href="#">Sleep</a></li>
+            <li><a href="#">Vaccines</a></li>
+            <li><a href="#">Diary</a></li>
+          </ul>
         </div>
-        <footer class="footer"></footer>
-    </div>
+        <!-- form -->
+        <form action="#" name="date">
+            <div class="wrapper-menu-form">
+              <a href="#">Cancel</a>
+              <span>New Feeding</span>
+              <input type="submit" name="button" class="button" value="Next">
+            </div>
+            <h2>Time</h2>
+            <!-- calendar -->
+            <div class="choose-time">
+                <div class="lines"></div>
+                <!-- select hour -->
+                <div class="outside">
+                    <select id="hour" class="drum" name="hour">
+                        <option value="12">12</option>
+                        <option value="11">11</option>
+                        <option value="10">10</option>
+                        <option value="9">9</option>
+                        <option value="8">8</option>
+                        <option value="7">7</option>
+                        <option value="6">6</option>
+                        <option value="5">5</option>
+                        <option value="4">4</option>
+                        <option value="3">3</option>
+                        <option value="2">2</option>
+                        <option value="1">1</option>
+                    </select>
+                </div>
+                <!-- select min -->
+                <div class="outside">
+                    <select id="min" class="drum" name="min">
+                        <option value="55">:55</option>
+                        <option value="50">:50</option>
+                        <option value="45">:45</option>
+                        <option value="40">:40</option>
+                        <option value="35">:35</option>
+                        <option value="30">:30</option>
+                        <option value="25">:25</option>
+                        <option value="20">:20</option>
+                        <option value="15">:15</option>
+                        <option value="10">:10</option>
+                        <option value="5">:05</option>
+                        <option value="0">:00</option>
+                    </select>
+                </div>
+                <!--  -->
+                <div class="outside">
+                    <select id="time-of-day" class="drum" name="time-of-day">
+                        <option value="am">AM</option>
+                        <option value="pm">PM</option>
+                    </select>
+                </div>
+            </div>
+        </form>
+    <footer class="footer"></footer>
 </body>
 </html>
