change wrapper bt-sleep and bt-sleep-time

--- a/BabyNoggin/bt-sleep.html
+++ b/BabyNoggin/bt-sleep.html
@@ -21,44 +21,42 @@
         });
     </script>
 </head>
-<body>
-    <div class="tracker wrapper-sleep">
-        <!-- header-->
-        <header class="header">
-          <h1 class="headering">baby tracker</h1>
-          <a href="#" class="arrow-back"><img src="img/arrow.png" alt="arrow" /></a>
-          <a href="#" class="menu"><img src="img/icon-menu.png" alt="arrow" /></a>
-        </header>
-        <!-- content -->
-        <div class="content">
-            <div class="list-menu">
-              <ul class="clear-fix">
-                <li><a href="#">Feed</a></li>
-                <li class="active-link"><a href="#">Sleep</a></li>
-                <li><a href="#">Vaccines</a></li>
-                <li><a href="#">Diary</a></li>
-              </ul>
-            </div>
-            <!-- form -->
-            <form action="#" name="date">
-                <div class="wrapper-menu-form">
-                  <a href="#">Cancel</a>
-                  <span>Sleep/Wake</span>
-                  <input type="submit" name="button" class="button" value="Next">
-                </div>
-                <!--  -->
-                <div class="wrapper-select">
-                    <div class="lines"></div>
-                    <!-- select sleep/wake -->
-                    <div class="">
-                        <select id="sleep" class="drum" name="sleep">
-                            <option value="0">Awake</option>
-                            <option value="1">Asleep</option>
-                        </select>
-                    </div>
-                </div>
-            </form>
+<body id="bt-sleep" class="page-wrapper tracker-wrapper">
+    <!-- header-->
+    <header class="header">
+      <h1 class="headering">baby tracker</h1>
+      <a href="#" class="arrow-back"><img src="img/arrow.png" alt="arrow" /></a>
+      <a href="#" class="menu"><img src="img/icon-menu.png" alt="arrow" /></a>
+    </header>
+    <!-- content -->
+    <div class="content">
+        <div class="list-menu">
+          <ul class="clearfix">
+            <li><a href="#">Feed</a></li>
+            <li class="active-link"><a href="#">Sleep</a></li>
+            <li><a href="#">Vaccines</a></li>
+            <li><a href="#">Diary</a></li>
+          </ul>
         </div>
+        <!-- form -->
+        <form action="#" name="date">
+            <div class="wrapper-menu-form">
+              <a href="#">Cancel</a>
+              <span>Sleep/Wake</span>
+              <input type="submit" name="button" class="button" value="Next">
+            </div>
+            <!--  -->
+            <div class="wrapper-select">
+                <div class="lines"></div>
+                <!-- select sleep/wake -->
+                <div class="">
+                    <select id="sleep" class="drum" name="sleep">
+                        <option value="0">Awake</option>
+                        <option value="1">Asleep</option>
+                    </select>
+                </div>
+            </div>
+        </form>
         <footer class="footer"></footer>
     </div>
 </body>
