Added suffix -page

--- a/BabyNoggin/bt-feed-time.html
+++ b/BabyNoggin/bt-feed-time.html
@@ -23,11 +23,11 @@
         });
     </script>
 </head>
-<body id="bt-feed-time" class="page-wrapper tracker-wrapper">
+<body id="bt-feed-time-page" class="page-wrapper tracker-wrapper">
     <!-- header-->
     <header class="header">
       <h1 class="headering">baby tracker</h1>
-      <a href="#" class="arrow-back"><img src="img/arrow.png" alt="arrow" /></a>
+      <a href="bt-feed.html" class="arrow-back"><img src="img/arrow.png" alt="arrow" /></a>
       <a href="#" class="menu"><img src="img/icon-menu.png" alt="arrow" /></a>
     </header>
     <!-- content -->
@@ -94,6 +94,8 @@
                 </div>
             </div>
         </form>
+    </div>
+    <!-- footer -->
     <footer class="footer"></footer>
 </body>
 </html>
