--- a/BabyNoggin/bt-feed.html
+++ b/BabyNoggin/bt-feed.html
@@ -23,7 +23,7 @@
         });
     </script>
 </head>
-<body id="bt-feed" class="page-wrapper tracker-wrapper">
+<body id="bt-feed-page" class="page-wrapper tracker-wrapper">
     <!-- header-->
     <header class="header">
       <h1 class="headering">baby tracker</h1>
@@ -63,7 +63,8 @@
                 </div>
             </div>
         </form>
-        <footer class="footer"></footer>
     </div>
+    <!-- footer -->
+    <footer class="footer"></footer>
 </body>
 </html>
