--- a/BabyNoggin/bt-sleep.html
+++ b/BabyNoggin/bt-sleep.html
@@ -21,7 +21,7 @@
         });
     </script>
 </head>
-<body id="bt-sleep" class="page-wrapper tracker-wrapper">
+<body id="bt-sleep-page" class="page-wrapper tracker-wrapper">
     <!-- header-->
     <header class="header">
       <h1 class="headering">baby tracker</h1>
@@ -57,7 +57,8 @@
                 </div>
             </div>
         </form>
-        <footer class="footer"></footer>
     </div>
+    <!-- footer -->
+    <footer class="footer"></footer>
 </body>
 </html>
