--- a/BabyNoggin/milestone-index.html
+++ b/BabyNoggin/milestone-index.html
@@ -10,7 +10,7 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
-<body id="milestone-index" class="page-wrapper">
+<body id="milestone-index-page" class="page-wrapper">
     <!-- header-->
     <header class="header">
       <h1 class="headering">sensory &amp; motor</h1>
@@ -41,8 +41,9 @@
             </li>
           </ul>
         </div>
-        <footer class="footer"></footer>
     </div>
+    <!-- footer -->
+    <footer class="footer"></footer>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/bin/materialize.min.js"></script>
