--- a/BabyNoggin/profile-page.html
+++ b/BabyNoggin/profile-page.html
@@ -32,14 +32,16 @@
             </div>
             <!-- link to progress -->
             <div class="progress-link">
-                <a href="progress-page.html">Mika's progress</a>
+                <a href="profile-progress.html">Mika's progress</a>
             </div>
             <!-- Next milestone -->
             <div class="milestone-wrapper">
                 <h5>Next milestone</h5>
                 <a href="#">Crossing Eyes</a>
             </div>
-            <footer class="footer"></footer>
+        </div>
+        <!-- footer -->
+        <footer class="footer"></footer>
         <!--Import jQuery before materialize.js-->
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="js/bin/materialize.min.js"></script>
