--- a/BabyNoggin/bt-sleep-time.html
+++ b/BabyNoggin/bt-sleep-time.html
@@ -23,7 +23,7 @@
         });
     </script>
 </head>
-<body id="bt-sleep-time" class="page-wrapper tracker-wrapper">
+<body id="bt-sleep-time-page" class="page-wrapper tracker-wrapper">
     <!-- header-->
     <header class="header">
       <h1 class="headering">baby tracker</h1>
@@ -94,7 +94,8 @@
               </div>
             </div>
         </form>
-        <footer class="footer"></footer>
     </div>
+    <!-- footer -->
+    <footer class="footer"></footer>
 </body>
 </html>
