--- a/BabyNoggin/our-status-test.html
+++ b/BabyNoggin/our-status-test.html
@@ -9,7 +9,7 @@
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
-    <body id="status-test" class="page-wrapper our-status-wrapper">
+    <body id="status-test-page" class="page-wrapper our-status-wrapper">
       <!-- header-->
       <header class="header">
         <h1 class="headering">our status icons</h1>
