--- a/BabyNoggin/profile-progress.html
+++ b/BabyNoggin/profile-progress.html
@@ -9,11 +9,11 @@
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
-    <body id="profile-progress" class="page-wrapper">
+    <body id="profile-progress-page" class="page-wrapper">
       <!-- header-->
       <header class="header">
         <h1 class="headering">Mika's page</h1>
-        <a href="#" class="arrow-back"><img src="img/arrow.png" alt="arrow" /></a>
+        <a href="profile-page.html" class="arrow-back"><img src="img/arrow.png" alt="arrow" /></a>
         <a href="#" class="menu"><img src="img/icon-menu.png" alt="arrow" /></a>
       </header>
       <!-- content -->
