--- a/BabyNoggin/milestone-index.html
+++ b/BabyNoggin/milestone-index.html
@@ -10,7 +10,7 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
-<body id="milestone-index-page" class="page-wrapper">
+<body id="milestone-index-page" class="page-wrapper milestone-pages">
     <!-- header-->
     <header class="header">
       <h1 class="headering">sensory &amp; motor</h1>
