--- a/BabyNoggin/mil-description.html
+++ b/BabyNoggin/mil-description.html
@@ -21,28 +21,29 @@
         });
     </script>
 </head>
-<body id="mil-activity-page" class="page-wrapper milestone-pages">
+<body id="mil-description-page" class="page-wrapper milestone-pages">
     <!-- header-->
     <header class="header">
       <h1 class="headering">sensory &amp; motor</h1>
-      <a href="milestone-index.html" class="arrow-back"><img src="img/arrow.png" alt="arrow" /></a>
+      <a href="mil-activity.html" class="arrow-back"><img src="img/arrow.png" alt="arrow" /></a>
     </header>
     <!-- content -->
     <div class="content">
       <div class="milestone-header">
-        <h2>
-          Crossing Eyes<br />
-          Test Summary
-        </h2>
+        <h2>What will you need?</h2>
       </div>
-      <div class="video-wrapper">
-        <video class="responsive-video video" controls>
-          <source src="video/movie.mp4" type="video/mp4">
-        </video>
+      <div class="img-wrapper">
+        <img src="img/baby-des.jpg" alt="baby" />
+      </div>
+      <div class="description">
+        <p>
+          You'll need a small toy or other object
+          that will attract and hold baby's attention.
+        </p>
       </div>
       <div class="link-block">
         <div class="link-wrapper">
-          <a href="mil-description.html">
+          <a href="mil-ready-test.html">
             <img src="img/arrow-right.png" alt="arrow" />
           </a>
         </div>
