--- a/BabyNoggin/milestone-index.html
+++ b/BabyNoggin/milestone-index.html
@@ -32,7 +32,7 @@
         <div class="crossing-eyes-test">
           <ul>
             <li>
-              <a href="#">Crossing Eyes test</a></li>
+              <a href="mil-activity.html">Crossing Eyes test</a></li>
             <li>
               <a href="#">
                 Can't cross her eyes?<br />
