--- a/BabyNoggin/setup-birthdate.html
+++ b/BabyNoggin/setup-birthdate.html
@@ -16,10 +16,40 @@
     <script src="ios/lib/drum.js"></script>
     <script>
         Hammer.plugins.fakeMultitouch();
-        $(document).ready(function () {
-          $("#month").drum({ panelCount: 20, dail_w: 35, dail_h: 10, dail_stroke_width: 2 });
-          $("#day").drum({ panelCount: 20, dail_w: 35, dail_h: 10, dail_stroke_width: 2 });
-          $("#year").drum({ panelCount: 20, dail_w: 35, dail_h: 10, dail_stroke_width: 2 });
+
+        function getIndexForValue(elem, value) {
+            for (var i = 0; i < elem.options.length; i++)
+            if (elem.options[i].value == value) return i;
+        }
+
+        function update(datetime) {
+            $("#date").drum('setIndex', datetime.getDate() - 1);
+            $("#month").drum('setIndex', datetime.getMonth());
+            $("#fullYear").drum('setIndex', getIndexForValue($("#fullYear")[0], datetime.getFullYear()));
+
+            $("#month").drum({ panelCount: 20, dail_w: 35, dail_h: 10, dail_stroke_width: 2 });
+            $("#date").drum({ panelCount: 20, dail_w: 35, dail_h: 10, dail_stroke_width: 2 });
+            $("#fullYear").drum({ panelCount: 20, dail_w: 35, dail_h: 10, dail_stroke_width: 2 });
+        }
+
+        $(document).ready(function() {
+            $("select.date").drum({
+                onChange: function(elem) {
+                    var arr = {
+                        'date': 'setDate',
+                        'month': 'setMonth',
+                        'fullYear': 'setFullYear'
+                    };
+                    var date = new Date();
+                    for (var s in arr) {
+                    var i = ($("form[name='date'] select[name='" + s + "']"))[0].value;
+                        eval("date." + arr[s] + "(" + i + ")");
+                    }
+                    date.setSeconds(0);
+                    update(date);
+                }
+            });
+            update(new Date());
         });
     </script>
 </head>
@@ -41,7 +71,7 @@
                 <div class="lines"></div>
                 <!-- select month -->
                 <div class="outside">
-                    <select id="month" class="drum" name="month">
+                    <select class="date" id="month" name="month">
                         <option value="0">January</option>
                         <option value="1">February</option>
                         <option value="2">March</option>
@@ -58,7 +88,7 @@
                 </div>
                 <!-- select day -->
                 <div class="outside">
-                    <select id="day" class="drum" name="day">
+                    <select class="date" id="date" name="date">
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
@@ -94,7 +124,7 @@
                 </div>
                 <!-- select year -->
                 <div class="outside">
-                    <select id="year" class="drum" name="year">
+                    <select class="date" id="fullYear" name="fullYear">
                         <option value="2011">2011</option>
                         <option value="2012">2012</option>
                         <option value="2013">2013</option>
