renamed mil-description to mil-hints

--- a/BabyNoggin/mil-activity.html
+++ b/BabyNoggin/mil-activity.html
@@ -29,16 +29,18 @@
     </header>
     <!-- content -->
     <div class="content">
-      <div class="milestone-header">
-        <h2>
-          Crossing Eyes<br />
-          Test Summary
-        </h2>
-      </div>
-      <div class="video-wrapper">
-        <video class="responsive-video video" controls>
-          <source src="video/movie.mp4" type="video/mp4">
-        </video>
+      <div class="milestone-content">
+        <div class="milestone-header">
+          <h2>
+            Crossing Eyes<br />
+            Test Summary
+          </h2>
+        </div>
+        <div class="video-wrapper">
+          <video class="responsive-video video" controls>
+            <source src="video/movie.mp4" type="video/mp4">
+          </video>
+        </div>
       </div>
       <div class="link-block">
         <div class="link-wrapper">
