--- a/BabyNoggin/mil-hints.html
+++ b/BabyNoggin/mil-hints.html
@@ -21,7 +21,7 @@
         });
     </script>
 </head>
-<body id="mil-description-page" class="page-wrapper milestone-pages">
+<body class="page-wrapper milestone-pages">
     <!-- header-->
     <header class="header">
       <h1 class="headering">sensory &amp; motor</h1>
@@ -29,17 +29,19 @@
     </header>
     <!-- content -->
     <div class="content">
-      <div class="milestone-header">
-        <h2>What will you need?</h2>
-      </div>
-      <div class="img-wrapper">
-        <img src="img/baby-des.jpg" alt="baby" />
-      </div>
-      <div class="description">
-        <p>
-          You'll need a small toy or other object
-          that will attract and hold baby's attention.
-        </p>
+      <div class="milestone-content">
+        <div class="milestone-header">
+          <h2>What will you need?</h2>
+        </div>
+        <div class="img-wrapper">
+          <img src="img/baby-des.jpg" alt="baby" />
+        </div>
+        <div class="description">
+          <p>
+            You'll need a small toy or other object
+            that will attract and hold baby's attention.
+          </p>
+        </div>
       </div>
       <div class="link-block">
         <div class="link-wrapper">
