change active radio-batons

--- a/BabyNoggin/mil-activity.html
+++ b/BabyNoggin/mil-activity.html
@@ -38,7 +38,7 @@
       </div>
       <div class="link-block">
         <div class="link-wrapper">
-          <a href="mil-description.html">
+          <a href="mil-hints.html">
             <img src="img/arrow-right.png" alt="arrow" />
           </a>
         </div>
