--- a/BabyNoggin/survey-diagram.html
+++ b/BabyNoggin/survey-diagram.html
@@ -9,7 +9,7 @@
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
-    <body id="test-status-page" class="page-wrapper survay-pages">
+    <body class="page-wrapper survay-pages">
       <!-- header-->
       <header class="header">
         <h1 class="headering">sensory &amp; motor</h1>
@@ -17,20 +17,20 @@
       </header>
       <!-- content -->
       <div class="content">
-        <div class="test-icon">
-          <img src="img/daisy-track.png" alt="status" />
-        </div>
         <div class="description">
-          <h2>Good job</h2>
+          <h2>Didn't cross her eyes?</h2>
           <p>
-            She's able to cross her eyes to focus on close objects.
-          </p>
-          <p>
-            <span>No need to repeat this test.</span>
+            <span>She's developing normally</span>
           </p>
         </div>
-        <div class="wrapper-link">
-          <a href="#">Home</a>
+        <div class="diagram-wrapper"></div>
+        <div class="description">
+          <p>
+            Not all babies develop at the same rate.
+          </p>
+          <p>
+            <span>Try again and be sure she's rested, fed, and alert.</span>
+          </p>
         </div>
       </div>
       <!-- footer -->
